--- a/package.json
+++ b/package.json
@@ -1,42 +1,27 @@
 {
-  "name": "ragchat-fullstack",
+  "name": "rag-backend",
   "version": "1.0.0",
-  "description": "A full-stack RAG chat application with React frontend and Node.js backend",
   "type": "module",
+  "main": "server.js",
   "scripts": {
-    "install-all": "npm run install-frontend && npm run install-backend",
-    "install-frontend": "cd frontend && npm install",
-    "install-backend": "cd backend && npm install",
-    "dev": "concurrently \"npm run dev-backend\" \"npm run dev-frontend\"",
-    "dev-frontend": "cd frontend && npm run dev",
-    "dev-backend": "cd backend && node server.js",
-    "build": "npm run build-frontend",
-    "build-frontend": "cd frontend && npm run build",
-    "start": "cd backend && npm start",
-    "start-production": "NODE_ENV=production npm run start",
-    "docker:build": "docker-compose build",
-    "docker:up": "docker-compose up -d",
-    "docker:down": "docker-compose down",
-    "docker:logs": "docker-compose logs -f",
-    "deploy:vercel": "cd frontend && vercel --prod",
-    "deploy:railway": "cd backend && railway up",
-    "deploy:render": "echo 'Connect your GitHub repo to Render dashboard for deployment'"
-  },
-  "keywords": [
-    "rag",
-    "pdf",
-    "chat",
-    "ai",
-    "react",
-    "nodejs"
-  ],
-  "author": "Shivam Mourya",
-  "license": "ISC",
-  "devDependencies": {
-    "concurrently": "^8.2.0"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "cloudinary": "^1.41.3",
-    "multer-storage-cloudinary": "^4.0.0"
+    "@google/genai": "^1.11.0",
+    "@langchain/community": "^0.3.53",
+    "@langchain/google-genai": "^0.2.16",
+    "@langchain/textsplitters": "^0.1.0",
+    "@pinecone-database/pinecone": "^5.1.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "langchain": "^0.3.31",
+    "multer": "^1.4.5-lts.1",
+    "pdf-parse": "^1.1.1",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
